# unic-python-lib

./: .gitignore  README.md  pyproject.toml
pyunic/: __init__.py  pyunic.py
test/: test.py
tests/: test.py
