[project]

name = "pyunic"
version = "0.0.2"
description = "Python utilities for UniC"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE.txt"}

#keywords = ["sample", "setuptools", "development"]  # Optional

authors = [
  {name = "Daniel Tremblay-Sher", email = "dtremblaysher@ferlab.bio" } # Optional
]
maintainers = [
  {name = "Daniel Tremblay-Sher", email = "dtremblaysher@ferlab.bio" } # Optional
]

classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 3 - Alpha",

  # Specify the Python versions you support here. In particular, ensure
  # that you indicate you support Python 3. These classifiers are *not*
  # checked by "pip install". See instead "python_requires" below.
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = [ # Optional
  "pyspark == 3.3.1",
  "pandas >= 2.1.0",
  "s3fs"
]

#[project.optional-dependencies] # Optional
#dev = ["check-manifest"]
#test = ["coverage"]

[project.urls]
#"Homepage" = "https://github.com/pypa/sampleproject"
#"Bug Reports" = "https://github.com/pypa/sampleproject/issues"
#"Funding" = "https://donate.pypi.org"
#"Say Thanks!" = "http://saythanks.io/to/example"
#"Source" = "https://github.com/pypa/sampleproject/"

[project.scripts]
#sample = "sample:main"

[tool.setuptools]
#package-data = {"sample" = ["*.dat"]}

[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"